# UROAM

./: .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  install.sh  libmemopt.map  memopt.spec  polkit.json
.cargo/: config.toml
aal/: CMakeLists.txt  aal.c
cli/: go.mod  main.go  uroamctl.py
daemon/: go.mod  go.sum  main.go
docs/: IMPLEMENTATION_SUMMARY.md  README.md  STATUS.md  architecture.md  fedora.md
ebpf/: ebpf_loader.c  uroam.bpf.c
etc/: uroam.conf
examples/: preload.sh
fedora-44-x86_64/: build.info  index.html
fedora-rawhide-x86_64/: build.info  index.html  uroam.spec
include/: memopt.h  uroam.h  uroam_aal.h  uroam_client.h
integrations/uroam/: __init__.py  ai_hooks.py  core.py
kernel/: CMakeLists.txt  Makefile  hooks.c  ipc.c  main.c  numa.c  pressure.c  tracking.c  uroam.h
kmod/: Makefile  uroam_kernel.c
packaging/SPECS/: uroam.spec
packaging/arch/: PKGBUILD  uroam.install
packaging/copr/: build.sh  copr-build.sh  copr-custom.sh  uroam.spec
packaging/deb/DEBIAN/: control
packaging/debian/: control  rules  uroam.install
packaging/rpm/: uroam-binary.spec  uroam.spec
packaging/systemd/: uroam.service
releases/: install-uroam.sh
scripts/: memopt.service
src/: allocator.c  client.c  compression.c  dedup.c  ksm.c  lib.rs  memopt.c  memopt.h  numa.c  numa_aware.c  pool.c
src/classification/: mod.rs
src/cli/: main.rs
src/compression/: mod.rs
src/config/: mod.rs
src/daemon/: main.rs
src/gaming/: mod.rs
src/idle/: mod.rs
src/ipc/: mod.rs
src/kernel/: mod.rs
src/optimization/: mod.rs
src/ramdisk/: mod.rs
src/shared/: memopt.c
src/user/: uroam_cli.py  uroam_daemon.py
tests/: aal_test.c  basic_test.c  benchmark_test.c  integrated_test.c  pool_test.c  preload_test.c  run_tests.sh  simple_pool_test.c  simple_test.c
tests/docs/: AGENTS.md  API.md  ARCHITECTURE.md  DEMO.md  FIXES.md  IMPLEMENTATION_SUMMARY.md  PROJECT_COMPLETE.md  architecture.md  installation.md
tests/old/: CMakeLists.txt  IMPLEMENTATION_COMPLETE.txt  verify_implementation.sh
tests/unit/: test_classification.py  test_optimization.py
